# yolo-trainer

./: .gitignore  pyproject.toml
src/yolo_trainer/: cam.py
